src/TheLanguage/src.old/TheLanguage/Parser/ANTLR/Grammar/.antlr/TheLanguageGrammarParser.java
// Generated from c:\Code\GitHub\davidbrownell\DavidBrownell\TheLanguage\src\TheLanguage\src\TheLanguage\Parser\ANTLR\Grammar\TheLanguageGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TheLanguageGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, HORIZONTAL_WHITESPACE=8, 
		NEWLINE=9, NESTED_NEWLINE=10, LINE_CONTINUATION=11, LPAREN=12, RPAREN=13, 
		LBRACK=14, RBRACK=15, INCLUDE_FROM=16, INCLUDE_IMPORT=17, IDENTIFIER=18, 
		INDENT=19, DEDENT=20;
	public static final int
		RULE_entry_point__ = 0, RULE_identifier = 1, RULE_expression__ = 2, RULE_include_expression = 3, 
		RULE_include_expression_source = 4, RULE_include_expression_source__ = 5, 
		RULE_include_expression_source_parent_dir = 6, RULE_include_expression_star = 7, 
		RULE_include_expression_items__ = 8, RULE_include_expression_grouped_items__ = 9, 
		RULE_include_expression_element = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry_point__", "identifier", "expression__", "include_expression", 
			"include_expression_source", "include_expression_source__", "include_expression_source_parent_dir", 
			"include_expression_star", "include_expression_items__", "include_expression_grouped_items__", 
			"include_expression_element"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'./'", "'/'", "'..'", "'*'", "','", "'as'", null, null, 
			null, null, "'('", "')'", "'['", "']'", "'from'", "'import'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "HORIZONTAL_WHITESPACE", 
			"NEWLINE", "NESTED_NEWLINE", "LINE_CONTINUATION", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "INCLUDE_FROM", "INCLUDE_IMPORT", "IDENTIFIER", "INDENT", 
			"DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TheLanguageGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TheLanguageGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Entry_point__Context extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TheLanguageGrammarParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(TheLanguageGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TheLanguageGrammarParser.NEWLINE, i);
		}
		public List<Expression__Context> expression__() {
			return getRuleContexts(Expression__Context.class);
		}
		public Expression__Context expression__(int i) {
			return getRuleContext(Expression__Context.class,i);
		}
		public Entry_point__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry_point__; }
	}

	public final Entry_point__Context entry_point__() throws RecognitionException {
		Entry_point__Context _localctx = new Entry_point__Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry_point__);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(22);
				match(NEWLINE);
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE_FROM || _la==INCLUDE_IMPORT) {
				{
				{
				setState(28);
				expression__();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TheLanguageGrammarParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression__Context extends ParserRuleContext {
		public Include_expressionContext include_expression() {
			return getRuleContext(Include_expressionContext.class,0);
		}
		public Expression__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression__; }
	}

	public final Expression__Context expression__() throws RecognitionException {
		Expression__Context _localctx = new Expression__Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression__);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(38);
			include_expression();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expressionContext extends ParserRuleContext {
		public TerminalNode INCLUDE_IMPORT() { return getToken(TheLanguageGrammarParser.INCLUDE_IMPORT, 0); }
		public Include_expression_starContext include_expression_star() {
			return getRuleContext(Include_expression_starContext.class,0);
		}
		public Include_expression_grouped_items__Context include_expression_grouped_items__() {
			return getRuleContext(Include_expression_grouped_items__Context.class,0);
		}
		public Include_expression_items__Context include_expression_items__() {
			return getRuleContext(Include_expression_items__Context.class,0);
		}
		public TerminalNode INCLUDE_FROM() { return getToken(TheLanguageGrammarParser.INCLUDE_FROM, 0); }
		public Include_expression_sourceContext include_expression_source() {
			return getRuleContext(Include_expression_sourceContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TheLanguageGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TheLanguageGrammarParser.NEWLINE, i);
		}
		public Include_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression; }
	}

	public final Include_expressionContext include_expression() throws RecognitionException {
		Include_expressionContext _localctx = new Include_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_include_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INCLUDE_FROM) {
				{
				setState(40);
				match(INCLUDE_FROM);
				setState(41);
				include_expression_source();
				}
			}

			setState(44);
			match(INCLUDE_IMPORT);
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				{
				setState(45);
				include_expression_star();
				}
				break;
			case LPAREN:
				{
				setState(46);
				include_expression_grouped_items__();
				}
				break;
			case IDENTIFIER:
				{
				setState(47);
				include_expression_items__();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				match(NEWLINE);
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_sourceContext extends ParserRuleContext {
		public List<Include_expression_source__Context> include_expression_source__() {
			return getRuleContexts(Include_expression_source__Context.class);
		}
		public Include_expression_source__Context include_expression_source__(int i) {
			return getRuleContext(Include_expression_source__Context.class,i);
		}
		public Include_expression_sourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_source; }
	}

	public final Include_expression_sourceContext include_expression_source() throws RecognitionException {
		Include_expression_sourceContext _localctx = new Include_expression_sourceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_include_expression_source);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(55);
				match(T__0);
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case IDENTIFIER:
				{
				{
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1 || _la==T__2) {
					{
					setState(56);
					_la = _input.LA(1);
					if ( !(_la==T__1 || _la==T__2) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(59);
				include_expression_source__();
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(60);
						match(T__2);
						setState(61);
						include_expression_source__();
						}
						} 
					}
					setState(66);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(67);
					match(T__2);
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_source__Context extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Include_expression_source_parent_dirContext include_expression_source_parent_dir() {
			return getRuleContext(Include_expression_source_parent_dirContext.class,0);
		}
		public Include_expression_source__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_source__; }
	}

	public final Include_expression_source__Context include_expression_source__() throws RecognitionException {
		Include_expression_source__Context _localctx = new Include_expression_source__Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_include_expression_source__);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				identifier();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				include_expression_source_parent_dir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_source_parent_dirContext extends ParserRuleContext {
		public Include_expression_source_parent_dirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_source_parent_dir; }
	}

	public final Include_expression_source_parent_dirContext include_expression_source_parent_dir() throws RecognitionException {
		Include_expression_source_parent_dirContext _localctx = new Include_expression_source_parent_dirContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_include_expression_source_parent_dir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_starContext extends ParserRuleContext {
		public Include_expression_starContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_star; }
	}

	public final Include_expression_starContext include_expression_star() throws RecognitionException {
		Include_expression_starContext _localctx = new Include_expression_starContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_include_expression_star);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_items__Context extends ParserRuleContext {
		public List<Include_expression_elementContext> include_expression_element() {
			return getRuleContexts(Include_expression_elementContext.class);
		}
		public Include_expression_elementContext include_expression_element(int i) {
			return getRuleContext(Include_expression_elementContext.class,i);
		}
		public Include_expression_items__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_items__; }
	}

	public final Include_expression_items__Context include_expression_items__() throws RecognitionException {
		Include_expression_items__Context _localctx = new Include_expression_items__Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_include_expression_items__);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			include_expression_element();
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					match(T__5);
					setState(82);
					include_expression_element();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(88);
				match(T__5);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_grouped_items__Context extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(TheLanguageGrammarParser.LPAREN, 0); }
		public Include_expression_items__Context include_expression_items__() {
			return getRuleContext(Include_expression_items__Context.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TheLanguageGrammarParser.RPAREN, 0); }
		public Include_expression_grouped_items__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_grouped_items__; }
	}

	public final Include_expression_grouped_items__Context include_expression_grouped_items__() throws RecognitionException {
		Include_expression_grouped_items__Context _localctx = new Include_expression_grouped_items__Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_include_expression_grouped_items__);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(LPAREN);
			setState(92);
			include_expression_items__();
			setState(93);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_expression_elementContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public Include_expression_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_expression_element; }
	}

	public final Include_expression_elementContext include_expression_element() throws RecognitionException {
		Include_expression_elementContext _localctx = new Include_expression_elementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_include_expression_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			identifier();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(96);
				match(T__6);
				setState(97);
				identifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}